<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@color/light_grey"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/join_group_code_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/join_group_code"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <TextView
        android:id="@+id/join_group_desc_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/join_group_desc"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:typeface="sans" />

    <EditText
        android:id="@+id/join_group_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/container_background_rounded_corner"
        android:hint="@string/send_message_hint"
        android:layout_marginTop="10dp"
        android:textSize="17sp"
        android:typeface="sans"
        android:padding="5dp" />

</LinearLayout>