<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    android:paddingBottom="10dp"
    android:paddingTop="10dp" >

    <ImageView
        android:id="@+id/login_logo_img"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:src="@drawable/login_page_logo" />

    <TextView
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_logo_img"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/app_desc"
        android:textColor="@color/grey_3"
        android:textSize="25sp"
        android:typeface="sans" />

    <TextView
        android:id="@+id/login_with_linkedin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/light_blue"
        android:paddingBottom="13dp"
        android:paddingLeft="55dp"
        android:paddingRight="55dp"
        android:paddingTop="13dp"
        android:text="@string/login_with_linkedin"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:typeface="sans" />

</RelativeLayout>