<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white" 
    android:layout_marginTop="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/profile_position_name_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="2dp"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="@string/connection_name_example"
        android:textColor="@color/grey_3"
        android:textSize="15sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <TextView
        android:id="@+id/profile_position_company_name_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingTop="2dp"
        android:text="@string/connection_company_example"
        android:textColor="@color/grey_3"
        android:textSize="15sp"
        android:typeface="sans" />
    
    <TextView
        android:id="@+id/profile_position_date_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingTop="2dp"
        android:text="@string/position_dates_example"
        android:textColor="@color/grey_4"
        android:textSize="13sp"
        android:typeface="sans" />
    
   <!--  <TextView
        android:id="@+id/profile_position_location_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingTop="2dp"
        android:text="@string/position_location_example"
        android:textColor="@color/grey_4"
        android:textSize="15sp"
        android:typeface="sans" />
 -->
</LinearLayout>