<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    android:padding="5dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/container_background"
            android:padding="10dp" >

            <ImageView
                android:id="@+id/settings_profile_user_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/no_img" />

            <LinearLayout
                android:id="@+id/settings_profile_user_data_container"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_toRightOf="@id/settings_profile_user_img"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/settings_profile_user_name_txt"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/connection_name_example"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/settings_profile_user_position_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="3"
                    android:text="@string/connection_position_example"
                    android:textColor="@color/grey_3"
                    android:textSize="14sp"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/settings_profile_user_location_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/connection_company_example"
                    android:textColor="@color/grey_4"
                    android:textSize="14sp"
                    android:typeface="sans" />
            </LinearLayout>
        </RelativeLayout>



        <LinearLayout
            android:id="@+id/settings_preferences_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/container_background"
            android:orientation="vertical"
            android:visibility="visible" >

            <TextView
                android:id="@+id/settings_my_preferences_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/container_background"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="2"
                android:padding="10dp"
                android:text="@string/my_preferences"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/settings_preference_ml_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="2"
                    android:text="@string/miles"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:typeface="sans" />

                <CheckBox
                    android:id="@+id/settings_preference_ml_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/settings_preference_km_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="2"
                    android:text="@string/kilometers"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:typeface="sans" />

                <CheckBox
                    android:id="@+id/settings_preference_km_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/settings_visibility_suggestions_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="100dp"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="2"
                    android:text="@string/visibility_in_suggestions"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:typeface="sans" />

                <Switch
                    android:id="@+id/settings_visibility_suggestions_sw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/settings_visibility_connections_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="100dp"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="2"
                    android:text="@string/visibility_in_connections"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:typeface="sans" />

                <Switch
                    android:id="@+id/settings_visibility_connections_sw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

</ScrollView>